; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifieee80211.c_setroam_cb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifieee80211.c_setroam_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_roamparams_req = type { i32 }

@IEEE80211_IOC_ROAM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @setroam_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setroam_cb(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ieee80211_roamparams_req*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.ieee80211_roamparams_req*
  store %struct.ieee80211_roamparams_req* %7, %struct.ieee80211_roamparams_req** %5, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @IEEE80211_IOC_ROAM, align 4
  %10 = load %struct.ieee80211_roamparams_req*, %struct.ieee80211_roamparams_req** %5, align 8
  %11 = call i32 @set80211(i32 %8, i32 %9, i32 0, i32 4, %struct.ieee80211_roamparams_req* %10)
  ret void
}

declare dso_local i32 @set80211(i32, i32, i32, i32, %struct.ieee80211_roamparams_req*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
